sites/all/themes/tmpltzr/css/html-elements.css
/* @override 
	http://www.columbia.edu/cu/arch/tmpltzr/html-elements.css
	http://postfog.org/templatizer/sites/all/themes/tmpltzr/css/html-elements.css?h
*/

body {

    margin: 0;

    padding: 0;

    font: 14px/20px Arial, Helvetica, sans-serif;

    color: #051215;

    background-color:white;

    text-align: center;

}



.wrapper a {

    text-decoration:underline;

    color:#000;

}

.wrapper a:hover {

    color: #777;

}

/* Removes dotted borders on clicked links from Firefox */

a:active {

    outline: none;

}

a:focus {

    -moz-outline-style: none;

}

blockquote {

    padding: 10px;

    background-color:#efefef;

    margin:0px;

}

/* HEADINGS */

h1 {
    font: bold 45px "DIN", Arial, Helvetica, sans-serif;
    margin: 0;
    padding:0 0 50px;
    text-transform:uppercase;
    width:500px;
}

h2 {

    font:bold 36px "DIN", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-transform:uppercase;
	margin:0 0 30px 0;
}

#tmpltzr h2 a{
	text-decoration: none !important;
	border-bottom: none;
}

#tmpltzr h2 a:hover {
	border-bottom: solid 2px;
	color: black !important;
}

h3 {

    font: bold 14px "DIN", Arial, Helvetica, sans-serif;
    text-transform:uppercase;
    margin: 0 0 15px;
    padding:0px 0px 0px 0px;
    
    

}

h4 {

    font: bold 14px "DIN", Arial, Helvetica, sans-serif;
    text-transform:uppercase;
    margin: 0 0 15px;
    padding:0px 0px 0px 0px;

}

h5 {
	font: bold 14px "DIN", Arial, Helvetica, sans-serif;
    text-transform:uppercase;
    margin: 0 0 15px;
    padding:0px 0px 0px 0px;
}

h6 {

    font: 24px Arial, Helvetica, sans-serif;

    font-weight:bold;

    margin: 0px;

    padding:0px 0px 10px 0px;

}

/* Table elements */

table {

    margin: 1em 0;

    width: 100%;

}



th a:link, th a:visited {

    color: gray;

}





tr.drag-previous {

    background-color: #ffd;

}

td.region, td.module, td.container, td.category {

    border-top: 1.5em solid #fff;

    border-bottom: 1px solid #b4d7f0;

    background-color: #d4e7f3;

    color: #455067;

    font-weight: bold;

}



tr:first-child td.region, tr:first-child td.module, tr:first-child td.container, tr:first-child td.category {

    border-top-width: 0;

}



iframe {

	border:none;

}

/* List elements */

.wrapper ul {

    margin: 0px;

    padding: 0;

    list-style-type: none;

    list-style-image: none;

}

#tmpltzr li{
	padding: 0 0 10px 0;
}

.wrapper li {

    width: auto;
}

ol {

    margin: 0.75em 0 1.25em;

    padding: 0 1em;

}

ul.menu, .item-list ul {

    margin: 0;

/* LTR */

    padding: 0;

}

ul.menu ul, .item-list ul ul {

    margin-left: 0em;

/* LTR */

}

ol li {

    padding: 0 0 .3em;

    margin: 0.15em 0 0.15em .5em;

/* LTR */

}

ol.task-list {

    margin-left: 0;

/* LTR */

    list-style-type: none;

    list-style-image: none;

}

ol.task-list li {

    padding: 0.5em 1em 0.5em 2em;

/* LTR */

}

ol.task-list li.active {

    background: transparent url(images/task-list.png) no-repeat 3px 50%;

/* LTR */

}

ol.task-list li.done {

    color: #393;

    background: transparent url(../../misc/watchdog-ok.png) no-repeat 0px 50%;

/* LTR */

}

ol.task-list li.active {

    margin-right: 1em;

/* LTR */

}

dl {

    margin: 0.5em 0 1em 1.5em;

/* LTR */

}

dl dt {

}

dl dd {

    margin: 0 0 .5em 1.5em;

/* LTR */

}



#main-menu:first-child {

	padding-bottom:40px;

}

.menu li a{

	text-decoration:none;

    color:#fff;

    text-transform: uppercase;

	font: bold 28px "DIN", Arial, Helvetica, sans-serif;

	display:block;

	padding:0 0 10px 24px !important;

}





.menu .expanded.active-trail .menu {

	border-left:none;

	display:block;

	position:relative;

	left:28px;

	width:300px;

	word-wrap: break-word

}



.menu .expanded.active-trail .menu li a {

	font: bold 18px "DIN", Arial, Helvetica, sans-serif;

}



.menu .expanded.active-trail .menu .menu {

	border:none;

	

}



.menu .expanded.active-trail .menu .menu .menu .menu{

	width:240px;



}



.menu {

	margin:0 !important;

	padding:0 !important;

	list-style:none !important;

}







/* TMPLTZR */
#tmpltzr {
	color:black;
	width:100%;
}


/*
	TMPLTZR Page Wrapper
*/
#tmpltzr .title-container{
	width:100%;
}
#tmpltzr h3.title{
	width:500px;
}

#tmpltzr a.anchorhash {
	display:none;
}

#tmpltzr p{
	padding:0 !important;
	margin:0 0 25px;
}

#tmpltzr a {
	text-decoration: none;
	border-bottom: solid 1px;
}

#tmpltzr .north-america, #tmpltzr .north-america a {
	color:#00D6FF;
}

#tmpltzr .latin-america, #tmpltzr .latin-america a {
	color:#00E652;
}

#tmpltzr .none {

}

#tmpltzr .south-asia, #tmpltzr .south-asia a {
	color:#FF9E00;
}

#tmpltzr .middle-east, #tmpltzr .middle-east a {
	color:#FF00A6;
}

#tmpltzr .africa, #tmpltzr .africa a { 
	color:#008AFF;
}

#tmpltzr .europe, #tmpltzr .europe a {
	color:#AD20FF;
}

#tmpltzr .asia, #tmpltzr .asia a {
	color:#FF555A;
}

#tmpltzr .other, #tmpltzr .other a {
	color:gray;
}

#tmpltzr a:hover {
	border-bottom: none;
}

#tmpltzr .view {
	margin-top:0;
	width:100%;
}

#tmpltzr .views-row {
	display:block;
	float:left;
}

/*
	TMPLTZR Node Primary (full, image, embed, video)
*/

#tmpltzr .tmpltzr-primary {
	margin:0 40px 48px 0;
	display:block;
}


#tmpltzr .tmpltzr-primaryimage{
	margin:0 40px 20px 0;
}



#tmpltzr .tmpltzr-primaryfull, #tmpltzr .tmpltzr-primaryhalf, #tmpltzr .tmpltzr-primaryvideo, #tmpltzr .tmpltzr-primaryembed, #tmpltzr .tmpltzr-primaryimage, #tmpltzr .tmpltzr-primaryphotoset {
	float:left;
	width:500px;
}



#tmpltzr .tmpltzr-primaryquarter {

	float:left;

	width:240px;

	margin-right:20px;

}



#tmpltzr .tmpltzr-primaryfull img{

	width:500px;

	display:block;	

}



#tmpltzr .tmpltzr-primaryhalf img{

	width:240px;

	display:block;	

}



#tmpltzr .tmpltzr-primaryquarter img{

	width:100px;

	display:block;	

}



#tmpltzr .tmpltzr-primaryfull .tmpltzr-image {

	margin:0 0 40px 0;

}
/* ... */

